style(config): improve code formatting consistency across configuration files
- Standardize indentation to 2 spaces in .luacheckrc
- Remove unused luacheck ignore rules (212, 213)
- Add trailing newline to .luacheckrc
- Format .luarc.json with consistent indentation

These formatting improvements align with the project's code style
guidelines and improve readability of configuration files.

--- a/.luarc.json
+++ b/.luarc.json
@@ -3,9 +3,13 @@
     "version": "LuaJIT"
   },
   "diagnostics": {
-    "globals": ["vim"]
+    "globals": [
+      "vim"
+    ]
   },
   "workspace": {
-    "ignoreDir": ["tests/"]
+    "ignoreDir": [
+      "tests/"
+    ]
   }
 }
